All Section Added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
   assets:
      - assets/images/
      - assets/svg/
+     - assets/coinImages/
      - assets/lottieAnimations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
